# statstudio

./: .env  .gitignore  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
Specs/: idea and design.md
statstudio/StatModels/: CountDataPoisson.py
statstudio/api/: endpoints.py  main.py
statstudio/frontend/: package-lock.json  package.json  vue.config.js
statstudio/frontend/src/: App.vue
statstudio/frontend/src/components/: Upload.vue
statstudio/model_engine/: model.py
statstudio/model_engine/models/: count_data_poisson.py
tests/: test_statstudio.py
worker/: celery_worker.py
