[tool.poetry]
name = "StatStudio"
version = "0.1.0"
description = "StatStudio platform for marketing analytics"
authors = ["gdberrio <guilherme.diazberrio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
fastapi = "^0.70.0"
pymc3 = "^3.11.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
